<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="360sp"
        android:layout_height="100sp"
        android:layout_marginTop="100dp"
        android:autoSizeTextType="uniform"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:foregroundTint="#CCFF90"
        android:inputType="number"
        android:textFontWeight="900"
        android:textSize="60sp"
        app:barrierMargin="@dimen/material_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_1"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_7"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/mult"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_4"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_2"
        android:textColor="#000"
        android:textSize="50sp"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_5"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_8"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_0"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/c"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/plus"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/minus"
        android:textColor="#546E7A"
        android:textSize="50sp"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/equal"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_3"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_6"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/_9"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E3BF0E"
        android:text="@string/part"
        android:textSize="50sp"
        android:textColor="#000"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button13" />
</androidx.constraintlayout.widget.ConstraintLayout>